--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -236,3 +236,19 @@ input:checked + div svg {
 .timerDiv button {
   text-decoration: underline;
 }
+
+.spinner {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 99999;
+}
+
+.spinner > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+}
